# dashbroad

./: package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/patch_window/: mod.rs
src/lib/core/app/: App.svelte
src/lib/modules/header/: index.ts
src/lib/modules/header/view/: Header.svelte
src/lib/modules/header/views/: Header.svelte
src/lib/modules/plugins/: index.ts
src/lib/modules/plugins/store/: index.ts
src/lib/modules/plugins/types/: index.ts
src/lib/modules/plugins/views/: PluginsList.svelte  index.ts
src/lib/modules/settings/components/: Themes.svelte
src/lib/modules/settings/store/: SettingsStoreHelpers.ts  index.ts
src/lib/modules/settings/views/: General.svelte  Mappings.svelte  Settings.svelte  index.ts
src/lib/modules/theme/store/: core-themes.ts  index.ts
src/lib/modules/theme/types/: index.ts
src/lib/shared/components/: Card.svelte  shared.ts
src/lib/shared/components/Button/: Button.svelte
src/lib/shared/components/Card/: Card.svelte
src/lib/shared/components/Draggable/: DraggableItem.svelte
src/lib/shared/components/Icon/: Icon.svelte
src/lib/shared/components/Label/: Label.svelte
src/lib/shared/components/ShortcutRecorder/: ShortcutRecorder.svelte
src/lib/shared/components/TabCard/: TabCard.svelte  index.ts
src/lib/shared/helpers/: index.ts
src/lib/shared/store/: index.ts
(+3 files in other folders)
