[package]
name = "dashbroad"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "macos-private-api", "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
window-vibrancy = "0.3.2"
serde_json = "1.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
